fix: align scores

--- a/src/components/board.module.css
+++ b/src/components/board.module.css
@@ -153,4 +153,7 @@
 }
 .values {
   margin-left: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
